Optimized images and updated offline page

--- a/offline.html
+++ b/offline.html
@@ -11,9 +11,9 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dumebi Iwuchukwu | Experience Designer</title>
-    <meta name="description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
-    <meta name="theme-color" content="#1f1f22"/>
+    <title>Dumebi Iwuchukwu | Product Designer</title>
+    <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
+    <meta name="theme-color" content="#9849b1"/>
 
   <link rel="canonical" href="https://www.dum3bi.com/">
   <meta property="og:site_name" content="Dumebi Iwuchukwu">
@@ -24,14 +24,14 @@
 
   <meta property="og:url" content="https://www.dum3bi.com/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Dumebi Iwuchukwu | Experience Designer.">
-  <meta property="og:description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
-  <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
+  <meta property="og:title" content="Dumebi Iwuchukwu | Product Designer.">
+  <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
+  <meta property="og:image" content="https://www.dum3bi.com/images/logo-black.png">
   <meta property="og:image:alt" content="Dumebi's logo">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Dumebi Iwuchukwu">
   <meta name="twitter:description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
-  <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
+  <meta name="twitter:image" content="https://www.dum3bi.com/images/logo-black.png">
 
   <meta property="og:type" content="website">
 
@@ -44,10 +44,12 @@
 
     <!-- CSS
     ================================================== -->
+    <link rel="preload" href="css/fonts.css" as="style" />
+    <link rel="preload" href="css/iconic/css/iconmonstr-iconic-font.min.css" as="style" />
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css\iconic\base.css">
+
 
     <!-- script
     ================================================== -->
@@ -62,6 +64,9 @@
     ================================================== -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+    <!-- Cookie consent
+    ================================================== -->
+
 <link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/><script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"colors":{"popup":{"background":"#000000","text":"#ffffff","border":"#ffffff"},"button":{"background":"#ffffff","text":"#000000"}},"position":"bottom","border":"normal","corners":"normal","transparency":"5","content":{"href":"https://www.dum3bi.com/cookie-policy"}})});</script>
 </head>
 
@@ -72,7 +77,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="#top"><img src="images/logo.svg" alt="Homepage"></a>
+            <a class="site-logo" href="#top"><img src="images/logo-black.png" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -80,6 +85,7 @@
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
+                <li><a href="scrapbook.html" target="_blank" title="works">Scrapbook</a></li>
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
@@ -102,45 +108,45 @@
 
 
               <h1>
-              Hi, I'm Dumebi<br>
-              I design experiences.<br>
-
-
+                Hi 👋🏼, I'm Dumebi, <br>
+                I design beautiful brands, products & experiences.
               </h1>
 
-                <div class="home-content__buttons">
-                  <a href="#about" class="smoothscroll btn btn--stroke">
-                      More About Me
-                  </a>
-                    <a href="#portfolio" class="smoothscroll btn btn--stroke">
-                        Latest Projects
-                    </a>
+             <div class="home-content__buttons">
+                 <a href="#works" class="smoothscroll btn btn--stroke">
+                     Latest Projects
+                 </a>
+                 <a href="#about" class="smoothscroll btn btn--stroke">
+                     About Me
+                 </a>
+             </div>
 
-                </div>
+             <div class="home-content__scroll">
+                 <a href="#about" class="scroll-link smoothscroll">
+                     <span>Scroll Down</span>
+                 </a>
+             </div>
 
-                <div class="home-content__scroll">
-                    <a href="#about" class="scroll-link smoothscroll">
-                        <span>Scroll Down</span>
-                    </a>
-                </div>
 
             </div>
 
         </div> <!-- end home-content -->
 
         <ul class="home-social">
-          <li>
-              <a href="https://wwww.linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
-          </li>
-          <li>
-              <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
-          </li>
-            <li>
-                <a href="https://www.github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
+             <li>
+                <a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
             </li>
             <li>
-                <a href="https://wwww.instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
             </li>
+            <li>
+                <a href="https://github.com/dum3bi" target="_blank" rel="noopener"><i class="im im-github" aria-hidden="true"></i><span>Github</span></a>
+            </li>
+            <li>
+                <a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+            </li>
+
+
         </ul>
         <!-- end home-social -->
 
@@ -154,8 +160,8 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full text-center">
                 <h3>About</h3>
-                <h1>Dumebi</h1>
-                <p class="lead">Experience Designer</p>
+                <h1>Dumebi Iwuchukwu</h1>
+                <p class="lead">Art Director & Product Designer</p>
             </div>
         </div>
 
@@ -168,10 +174,11 @@
 <div class="col-six tab-full right">
 
             <div>
-              <h3>Dumebi Iwuchukwu is an art director, experience designer and teacher. </h3>
+              <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient diagnosis and care.</h3>
 
-                <p>
-                  Working at the intersection of digital product design, advertising and brand identity, he's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.
+               <p>As a designer, he specializes in art direction, brand identity, and product design.</p>
+
+                <p>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Haptics, Globacom and more.</p>
             </div>
 
 </div>
@@ -204,7 +211,7 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap">
+               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap" class="lazyload">
                  <a href="#modal-04" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
@@ -220,7 +227,7 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay">
+               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay" class="lazyload">
                  <a href="#modal-06" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
@@ -234,7 +241,40 @@
               </div>
            </div> <!-- /folio-item -->
 
+           <div class="bgrid folio-item">
+                <div class="item-wrap">
+                 <img src="images\portfolio\gallery\Skatedeck_challenge.jpg" alt="dentiti baseball cap" class="lazyload">
+                   <a href="#modal-01" class="overlay">
+                      <div class="folio-item-table">
+                       <div class="folio-item-cell">
+                        <h3 class="folio-title">Skatedeck Challenge</h3>
+                        <span class="folio-types">
+                           Art direction and Graphic design
+                        </span>
+                    </div>
+                      </div>
+                   </a>
+                </div>
+             </div> <!-- /folio-item -->
 
+
+
+
+             <div class="bgrid folio-item">
+                <div class="item-wrap">
+                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="Dangote Pasta Pack ad" class="lazyload">
+                   <a href="#modal-03" class="overlay">
+                      <div class="folio-item-table">
+                       <div class="folio-item-cell">
+                         <h3 class="folio-title">Schweppes</h3>
+                       <span class="folio-types">
+                           Art Direction & Marketing Design
+                       </span>
+                    </div>
+                      </div>
+                   </a>
+                </div>
+             </div> <!-- /folio-item -->
 
           <div class="bgrid folio-item">
                <div class="item-wrap">
@@ -257,7 +297,7 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad">
+                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad" class="lazyload">
                   <a href="#modal-03" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
@@ -328,7 +368,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">Details</a>
+                <a href="#">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -386,46 +426,8 @@
         </div>
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-                <form name="contactForm" id="contactForm" method="post" action="/thank-you" data-netlify="true">
-                    <fieldset>
-
-                    <div class="form-field">
-                        <input name="contactName" input type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
-                    </div>
-                    <div class="form-field">
-                        <input name="contactEmail" input type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
-                    </div>
-                    <div class="form-field">
-                        <input name="contactSubject" input type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
-                    </div>
-                    <div class="form-field">
-                        <textarea name="contactMessage" id="contactMessage" placeholder="Message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
-                    </div>
-                    <div class="form-field">
-                        <button class="full-width btn--primary">Submit</button>
-                        <div class="submit-loader">
-                            <div class="text-loader">Sending...</div>
-                            <div class="s-loader">
-                                <div class="bounce1"></div>
-                                <div class="bounce2"></div>
-                                <div class="bounce3"></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    </fieldset>
-                </form>
-
-                <!-- contact-warning -->
-                <div class="message-warning">
-                    Something went wrong. Please try again.
-                </div>
-
-                <!-- contact-success -->
-                <div class="message-success">
-                    Your message was sent, thank you!<br>
-                </div>
-
+              <h4 class="h06">Email</h4>
+              <p><a href="mailto:me@dum3bi.com">me@dum3bi.com</a></p>
             </div>
             <div class="col-four tab-full contact__infos">
               <h4 class="h06">Phone</h4>
@@ -444,7 +446,7 @@
             <div class="col-full">
 
                 <div class="footer-logo">
-                    <a class="footer-site-logo" href="#top"><img src="images/logo.svg" alt="Homepage"></a>
+                    <a class="footer-site-logo" href="#top"><img src="images\logo-black.png" alt="Homepage"></a>
                 </div>
 
                 <ul class="footer-social">
