--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
-
     <!-- PWA
     ================================================== -->
     <link rel="manifest" href="manifest.json">
@@ -176,9 +175,9 @@
             <div>
               <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient diagnosis and care.</h3>
 
-               <p>As a designer, he specializes in art direction, brand identity, and product design.</p>
+               <h4>As a designer, he specializes in art direction, brand identity, and product design.</h4>
 
-                <p>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Haptics, Globacom and more.</p>
+                <h4>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Haptics, Globacom and more.</h4>
             </div>
 
 </div>
