--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </h1>
 
              <div class="home-content__buttons">
-                 <a href="#works" class="smoothscroll btn btn--stroke">
+                 <a href="#portfolio" class="smoothscroll btn btn--stroke">
                      Latest Projects
                  </a>
                  <a href="#about" class="smoothscroll btn btn--stroke">
