--- a/index.html
+++ b/index.html
@@ -210,6 +210,22 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
+               <img src="images/portfolio/gallery/OneBank.jpg" alt="OneBank Movie poster design" class="lazyload">
+                 <a href="#modal-05" class="overlay">
+                    <div class="folio-item-table">
+                     <div class="folio-item-cell">
+                       <h3 class="folio-title">OneBank</h3>
+                     <span class="folio-types">
+                         Brand & Marketing Design
+                     </span>
+                  </div>
+                    </div>
+                 </a>
+              </div>
+           </div> <!-- /folio-item -->
+
+           <div class="bgrid folio-item">
+              <div class="item-wrap">
                <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap" class="lazyload">
                  <a href="#modal-04" class="overlay">
                     <div class="folio-item-table">
@@ -261,8 +277,8 @@
 
              <div class="bgrid folio-item">
                 <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="Dangote Pasta Pack ad" class="lazyload">
-                   <a href="#modal-03" class="overlay">
+                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="hand holding glass of Schweppes" class="lazyload">
+                   <a href="#modal-02" class="overlay">
                       <div class="folio-item-table">
                        <div class="folio-item-cell">
                          <h3 class="folio-title">Schweppes</h3>
@@ -274,25 +290,6 @@
                    </a>
                 </div>
              </div> <!-- /folio-item -->
-
-          <div class="bgrid folio-item">
-               <div class="item-wrap">
-                <img src="images\portfolio\gallery\cap-front.jpg" alt="dentiti baseball cap" class="lazyload">
-                  <a href="#modal-01" class="overlay">
-                     <div class="folio-item-table">
-                      <div class="folio-item-cell">
-                       <h3 class="folio-title">D3ntiti</h3>
-                       <span class="folio-types">
-                          Brand Identity and Marketing Design
-                       </span>
-                   </div>
-                     </div>
-                  </a>
-               </div>
-            </div> <!-- /folio-item -->
-
-
-
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
@@ -315,12 +312,12 @@
             <div id="modal-01" class="popup-modal slider mfp-hide">
 
             <div class="media">
-              <img src="images\portfolio\modals\cap-front-m.jpg" alt="" />
+              <img src="images/portfolio/modals/Skatedeck-m.png" alt="" />
             </div>
 
            <div class="description-box">
-              <h4>D3ntiti</h4>
-              <p>A case study of the Brand Identity & Marketing strategy my team created for the Dentiti clothing brand.</p>
+              <h4>Skatedeck challenge</h4>
+              <p>A cross section designs I did combining my love for typography, grids and pop culture. Hope you enjoy these expressions...</p>
 
               <div class="categories">Brand Identity, Apparel and Marketing Design</div>
            </div>
@@ -330,7 +327,27 @@
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
-         </div> <!-- /modal-01 -->
+         </div> <!-- /modal-02 -->
+
+         <div id="modal-02" class="popup-modal slider mfp-hide">
+
+         <div class="media">
+           <img src="images/portfolio/modals/schweppes-m.png" alt="" />
+         </div>
+
+         <div class="description-box">
+           <h4>Schweppes</h4>
+           <p>These are brand, product and marketing designs done for Schweppes Nigeria. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
+
+           <div class="categories">Brand Identity, Apparel and Marketing Design</div>
+         </div>
+
+          <div class="link-box">
+             <a href="#" class="popup-modal-dismiss">Details</a>
+           <a href="#" class="popup-modal-dismiss">Close</a>
+          </div>
+
+        </div> <!-- /modal-02 -->
 
 
          <div id="modal-03" class="popup-modal slider mfp-hide">
@@ -372,6 +389,24 @@
              </div>
 
          </div> <!-- /modal-04 -->
+
+         <div id="modal-05" class="popup-modal slider mfp-hide">
+
+            <div class="media">
+              <img src="images/portfolio/modals/OneBank-m.png" alt="OneBank_Flatlay" />
+            </div>
+
+           <div class="description-box">
+              <h4>OneBank</h4>
+              <p>These are brand, product and marketing designs done for OneBank. These included graphics and animations for Social Media, Print, Advertising and Internal Communications.</p>
+
+              <div class="categories">Brand, Product & Marketing Design</div>
+           </div>
+
+             <div class="link-box">
+                <a href="#">Details</a>
+              <a href="#" class="popup-modal-dismiss">Close</a>
+             </div>
 
          </div> <!-- /modal-05 -->
 
