--- a/scrapbook.html
+++ b/scrapbook.html
@@ -117,8 +117,9 @@
                 <h1>SCRAPBOOK</h1>
 
 
-                 <p>My conscious appreciation of design and art started at the age of eight when my Mom gave me the gift of a scrapbook, Its wide empty pages fuelled my imagination with possibilities and I started a collage of beautiful ads and comics from my Dad's old magazines and newspapers. I could say that's how my journey as a designer began.</p>
-                  <p>This Scrapbook is different from that of my childhood in the sense that these are either snippets from large projects I worked on, my photography or simply just experiments from the past 9 years.</p>
+                 <p>My conscious appreciation of design and art started at the age of eight when my Mom gave me the gift of a scrapbook, Its wide empty pages filled my imagination with possibilities and there begun my journey as a designer.</p> <br>
+                   <p> I could say that's how my journey as a designer began. I would cut out comic strips and beautiful ads from my Dad's old magazines and newspapers </p> <br>
+                  <p>This scrapbook is not much different from the scrapbook of my childhood, as I'm still collecting images i loved. It's just no longer from my dad's magazines but snippets from large projects I worked on, my photography or simply just experiments from the past 9 years.</p>
             </div>
         </div>
         <div class="row portfolio-content">
