--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h3>Portfolio</h3>
                 <h1>My Latest Projects.</h1>
 
-                <p class="lead">“You might see me with my hoody up, I ain't leaving 'til I finish.” <br>
+                <p style="text-align:center;" class="lead">“You might see me with my hoody up, I ain't leaving 'til I finish.” <br>
                                     -NF</p>
             </div>
         </div>
@@ -418,7 +418,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>Dumebi Iwuchukwu</h1>
-                <p class="lead">Art Director & Product Designer</p>
+                <p style="text-align:center;" class="lead">Art Director & Product Designer</p>
             </div>
         </div>
 
@@ -455,17 +455,16 @@
                 <h3>Let's work together</h3>
                 <h1>Contact me.</h1>
 
-                <p>I like to listen.</p>
+                <p style="text-align:center;" class="lead">I like to listen.</p>
             </div>
         </div>
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-              <h4 class="h06">Email</h4>
-              <p><a href="mailto:me@dum3bi.com">me@dum3bi.com</a></p>
+              <h4 class="h06">Email: <a href="mailto:me@dum3bi.com">me@dum3bi.com</a></h4>
+
             </div>
             <div class="col-four tab-full contact__infos">
-              <h4 class="h06">Phone</h4>
-              <p><a href="tel:234 9065 71 2102">234-9065-71-2102</a></p>
+              <h4 class="h06">Phone: <a href="tel:234 9065 71 2102">234-9065-71-2102</a></h4>
             </div>
 
         </div>
