add pre-populated subject line to mail contact

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         </div>
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-              <h4 class="h06">Email: <a href="mailto:me@dum3bi.com">me@dum3bi.com</a></h4>
+              <h4 class="h06">Email: <a href="mailto:me@dum3bi.com?cc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A">me@dum3bi.com</a></h4>
 
             </div>
             <div class="col-four tab-full contact__infos">
