--- a/index.html
+++ b/index.html
@@ -459,13 +459,14 @@
             </div>
         </div>
         <div class="row contact__main">
-            <div class="col-eight tab-full contact__form">
-              <h4 class="h06">Email: <a href="mailto:me@dum3bi.com?bcc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A">me@dum3bi.com</a></h4>
-
-            </div>
-            <div class="col-four tab-full contact__infos">
-              <h4 class="h06">Phone: <a href="tel:234 9065 71 2102">234-9065-71-2102</a></h4>
-            </div>
+          <div class="col-eight tab-full contact__form">
+            <h4 class="h06">Email</h4>
+            <p><a href="mailto:me@dum3bi.com?bcc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A">me@dum3bi.com</a></p>
+          </div>
+          <div class="col-four tab-full contact__infos">
+            <h4 class="h06">Phone</h4>
+            <p><a href="tel:234 9065 71 2102">234-9065-71-2102</a></p>
+          </div>
 
         </div>
 
