--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         <div class="row contact__main">
           <div class="col-eight tab-full contact__form">
             <h4 class="h06">Email</h4>
-            <p><a href="mailto:me@dum3bi.com?bcc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A">me@dum3bi.com</a></p>
+            <p><a href="mailto:me@dum3bi.com?bcc=dum3bi@gmail.com&subject=Nice%20meeting%20you%20Dumebi&body=Hi%20Dumebi%2C%0D%0A%0D%0A" target="_blank">me@dum3bi.com</a></p>
           </div>
           <div class="col-four tab-full contact__infos">
             <h4 class="h06">Phone</h4>
