--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">Details</a>
+                <a href="#" class="popup-modal-dismiss">See Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -311,7 +311,7 @@
          </div>
 
           <div class="link-box">
-             <a href="#" class="popup-modal-dismiss">Details</a>
+             <a href="#" class="popup-modal-dismiss">See Details</a>
            <a href="#" class="popup-modal-dismiss">Close</a>
           </div>
 
@@ -332,7 +332,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">Details</a>
+                <a href="#" class="popup-modal-dismiss">See Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -352,7 +352,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#">Details</a>
+                <a href="#">See Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -372,7 +372,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#">Details</a>
+                <a href="#">See Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -392,7 +392,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">Details</a>
+                <a href="#" class="popup-modal-dismiss">See Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
@@ -431,11 +431,11 @@
     <div class="col-six tab-full right">
 
             <div>
-              <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient diagnosis and care.</h3>
+              <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient diagnosis and care.</h3><br>
 
-               <h4>As a designer, he specializes in art direction, brand identity, and product design.</h4>
+               <p>As a designer, he specializes in art direction and product design.</p> <br>
 
-                <h4>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Haptics, Globacom and more.</h4>
+                <p>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Haptics, Globacom and more.</p>
             </div>
 
     </div>
